Adicionando texto no sobre nós e no nosso produto

--- a/Site_institucional/winetemp.html
+++ b/Site_institucional/winetemp.html
@@ -111,19 +111,22 @@
                 </div>
             </div>
         </section>
-
         <div class="equipe">
-            <div class="sobre">
+            <div class="sobre" id="produto">
                 <div class="container">
-                    <div class="card">
-                        <img src="imgs/imagem-de-barris-de-vinho.avif" alt="">
-                        <h4>Quem somos</h4>
-                        <p>Somos uma empresa de tecnologia voltada ao ramo de controle de temperatura e umidade em
-                            Vínicolas,
-                            visando diminuir percas e otimizar seu negócio,
-                            para uma gestão mas eficiente com sistemas de qualidade.
+                    <div class="card" id="NossoProduto">
+                        <center><h1>Nosso produto</h1></center>
+                        <p style="font-size: 22px;">Utilizamos o sensor DHT11 o sensor DHT11 é um sensor de temperatura e umidade bastante popular e amplamente utilizado em projetos eletrônicos, 
+                                especialmente em projetos de automação residencial, 
+                            estações meteorológicas caseiras e outros dispositivos que exigem monitoramento dessas variáveis ambientais.
+                            Utilizaremos esse sensor para controlar a temperatura e umidade do barril de vinho no qual a temperatura deve manter-se
+                            entre 10º e 15° graus dependendo do tipo de vinho e a umidade que deve estar entre 50% e 80%. 
+                            Manter o vinho em um ambiente com temperatura e umidade estáveis é essencial para garantir que ele envelheça adequadamente e mantenha sua qualidade.
+                            Para isso, muitos entusiastas de vinho investem em adegas com controle de temperatura e umidade ou em unidades de armazenamento específicas para vinho.
+                            Uma das maiores vantagens do DHT11 é seu baixo custo em comparação com outros sensores de umidade e temperatura. 
+                            Isso o torna uma escolha popular para projetos. Ou seja o produto WineTemp é de ótimo custo benefício e fora isso proporciona um melhor 
+                            controle da sua vinícola.
                         </p>
-
                     </div>
                 </div>
             </div>
@@ -230,8 +233,12 @@
     <section id="sobre-nos">
         <div class="container">
             <h2>Sobre Nós</h2>
-            <p>Somos uma empresa de tecnologia voltada ao ramo de controle de temperatura e umidade em Vínicolas. Nosso
-                objetivo é proporcionar um ambiente perfeito para que cada garrafa alcance sua excelência máxima.</p>
+            <p style="font-size: 20px;">Somos uma empresa de tecnologia voltada ao ramo de controle de temperatura e umidade em Vínicolas. Nosso
+                objetivo é proporcionar um ambiente perfeito para que cada garrafa alcance sua excelência máxima. Fundado em 2024, nossa jornada começou com a simples ideia de melhorar a visão do cliente sobre seu negócio.
+
+                Na WineTemp, valorizamos a experiência do usuário acima de tudo. Nos esforçamos para fornecer os melhores serviços para controle de temperaturae umidade no seu negócio. 
+                
+                Nossa equipe é composta por profissionais talentosos e dedicados, prontos para ajudá-lo em cada etapa do caminho. Estamos sempre abertos a feedback e sugestões, pois acreditamos que é através da colaboração que podemos alcançar os melhores resultados. </p>
         </div>
     </section>
 
