--- a/Site_institucional/Cadastro.html
+++ b/Site_institucional/Cadastro.html
@@ -31,20 +31,14 @@
         <br><br>
 
         <div class="input-field">
+            <input type="text" name="Nome" id="demo_empresa" required="required" autocomplete="off">
+            <span>Empresa</span>
+        </div>
+
+
+        <div class="input-field">
             <input type="text" name="Nome" id="demo_nome" required="required" autocomplete="off">
             <span>Nome completo</span>
-        </div>
-
-
-        <div class="input-field">
-            <input type="text" name="Número" id="demo_numero" required="required" autocomplete="off">
-            <span>Número celular</span>
-        </div>
-
-
-        <div class="input-field">
-            <input type="text" name="CNPJ" id="demo_cnpj" required="required" autocomplete="off">
-            <span>CNPJ</span>
         </div>
 
 
