--- a/Site_institucional/dashboard.html
+++ b/Site_institucional/dashboard.html
@@ -16,128 +16,110 @@
 <body>
   <div class="pai">
     <div class="header">
-     <a href="/Site_institucional/winetemp.html"><img src="imgs/Logo.png" alt="Logo" class="logo"></a>
+      <a href="/Site_institucional/winetemp.html"><img src="imgs/Logo.png" alt="Logo" class="logo"></a>
       <div class="container1">
         <ul class="navbar">
-          <li><a href="..\integraArduinoide\index.html">Tempo Real</a></li>
 
-          <li>|</li>
           <li><a href="Login.html">Sair</a></li>
         </ul>
       </div>
     </div>
+    <div class="father1">
+      <div class="son">
+        <div class="">
+          <h3>Barril 1</h3>
+          <a href="..\integraArduinoide\index.html">
+            <img src="imgs/barril-vermelho.svg" alt="">
+          </a>
+          <p>Temperatura Max:13.4</p>
+          <p>Temperatura Min:19.8</p>
+        </div>
+        <div>
+          <h3>Barril 2</h3>
+          <a href="..\integraArduinoide\index.html">
+            <img src="imgs/barril-vermelho.svg" alt="">
+          </a>
+          <p>Temperatura Max:13.4</p>
+          <p>Temperatura Min:19.8</p>
+        </div>
+        <div>
+          <h3>Barril 3</h3>
+          <a href="..\integraArduinoide\index.html">
+            <img src="imgs/barril-vermelho.svg" alt="">
+          </a>
+          <p>Temperatura Max:13.4</p>
+          <p>Temperatura Min:19.8</p>
+        </div>
+        <div>
+          <h3>Barril 4</h3>
+          <a href="..\integraArduinoide\index.html">
+            <img src="imgs/barril-amarelo.svg" alt="">
+          </a>
+          <p>Temperatura Max:13.4</p>
+          <p>Temperatura Min:19.8</p>
+        </div>
+        <div>
+          <h3>Barril 5</h3>
+          <a href="..\integraArduinoide\index.html">
+            <img src="imgs/barril-amarelo.svg" alt="">
+          </a>
+          <p>Temperatura Max:13.4</p>
+          <p>Temperatura Min:19.8</p>
+        </div>
+        <div>
+          <h3>Barril 6</h3>
+          <a href="..\integraArduinoide\index.html">
+            <img src="imgs/barril-amarelo.svg" alt="">
+          </a>
+          <p>Temperatura Max:13.4</p>
+          <p>Temperatura Min:19.8</p>
+        </div>
+        <div>
+          <h3>Barril 7</h3>
+          <a href="..\integraArduinoide\index.html">
+            <img src="imgs/barril-verde.svg" alt="">
+          </a>
+          <p>Temperatura Max:13.4</p>
+          <p>Temperatura Min:19.8</p>
+        </div>
+        <div>
+          <h3>Barril 8</h3>
+          <a href="..\integraArduinoide\index.html">
+            <img src="imgs/barril-verde.svg" alt="">
+          </a>
+          <p>Temperatura Max:13.4</p>
+          <p>Temperatura Min:19.8</p>
+        </div>
+        <div>
+          <h3>Barril 9</h3>
+          <a href="..\integraArduinoide\index.html">
+            <img src="imgs/barril-verde.svg" alt="">
+          </a>
+          <p>Temperatura Max:13.4</p>
+          <p>Temperatura Min:19.8</p>
+        </div>
+        <div>
+          <h3>Barril 10</h3>
+          <a href="..\integraArduinoide\index.html">
 
-
-    <div class="grupo">
-      <div class="father">
-        <h1>Bem Vindo ao Dashboard Fernando Brandão</h1>
-
-        <div class="child">
-          <div class="child-left">
-            <div class="campo">
-              <!-- 1 -->
-              <!-- Umidade -->
-              <div class="informacao-card">
-
-                <div class="item-informacao">
-                  <div class="temp">
-                    <b>78%</b>
-                  </div>
-                  <div class="desc1">
-                    Umidade Maxima
-                  </div>
-                </div>
-                <!-- 2 -->
-                <div class="item-informacao">
-                  <div class="temp">
-                    <b>55%</b>
-                  </div>
-                  <div class="desc1">
-                    Umidade Minima
-                  </div>
-                </div>
-                <!-- 3 -->
-              </div>
-
-              <div class="branco">
-                .
-              </div>
-              <!-- fim -->
-
-              <!--Temperatura  -->
-              <!-- 1 -->
-              <div class="informacao-card">
-                <div class="item-informacao">
-                  <div class="temp">
-                    <b>16°C</b>
-                  </div>
-                  <div class="desc1">
-                    Temperatura Maxima
-                  </div>
-                </div>
-                <!-- 2 -->
-                <div class="item-informacao">
-                  <div class="temp">
-                    <b>8°C</b>
-                  </div>
-                  <div class="desc1">
-                    Temperatura Minima
-                  </div>
-                </div>
-                <!-- 3 -->  
-              </div>
-            </div>
-
-            <div class="card-item-1">
-              <h2>Geral - Setor 1</h2>
-              <div class="tela">
-
-                <div class="grafico1">
-                  <canvas class="myChart" id="myChart"></canvas>
-                </div>
-
-
-              </div>
-
-
-            </div>
-
-          </div>
-          <div class="child-right">
-
-            <div class="card-item-2">
-              <h2><a style="color: white;" href="..\integraArduinoide\index.html"> Barril E ⚠️</a></h2>
-              <div class="tela2">
-                <div class="grafico2">
-                  <canvas class="myChart2" id="myChart2"></canvas>
-                </div>
-              </div>
-              <div class="espaco">
-              </div>
-            </div>
-            <div class="card-item-3">
-              <h2>Geral - Setores</h2>
-              <div class="tela3">
-                  <div class="alerta">
-                  
-                  </div>
-                  <div class="grafico3">
-                      <canvas class="myChart3" id="myChart3"></canvas>
-                  </div>
-              </div>
-          </div>
+            <img src="imgs/barril-verde.svg" alt="">
+          </a>
+          <p>Temperatura Max:13.4</p>
+          <p>Temperatura Min:19.8</p>
+        </div>
+      </div>
     </div>
 
-  </div>
-  </div>
+    <div class="grupo">
 
-  </div>
+
+    </div>
 
   </div>
   </div>
 
   <script>
-    alert('Barril E está com a temperatura elevada. Risco de perda de vinho!')
+    // alert('Barril E está com a temperatura elevada. Risco de perda de vinho!')
 
     const ctx = document.getElementById('myChart');
 
@@ -149,8 +131,8 @@
           label: 'Temperatura Média',
           data: [16, 14, 14, 15, 8, 16],
           borderWidth: 1,
-         // borderColor: '#DEB887',
-      backgroundColor: '#AE1C1F'
+          // borderColor: '#DEB887',
+          backgroundColor: '#AE1C1F'
 
         },
 
@@ -158,8 +140,8 @@
           label: 'Umidade Média',
           data: [55, 62, 60, 62, 78, 65],
           borderWidth: 1,
-        //  borderColor: '#B0E0E6',
-      backgroundColor: '#F2CD7C'
+          //  borderColor: '#B0E0E6',
+          backgroundColor: '#F2CD7C'
 
         }]
       },
@@ -185,7 +167,7 @@
           data: [5, 6, 7, 9, 8, 8],
           borderWidth: 1,
           borderColor: '#AE1C1F',
-      backgroundColor: '#AE1C1F' 
+          backgroundColor: '#AE1C1F'
         },
 
         {
@@ -193,7 +175,7 @@
           data: [80, 76, 80, 76, 80, 78],
           borderWidth: 1,
           borderColor: '#F2CD7C',
-      backgroundColor: '#F2CD7C'
+          backgroundColor: '#F2CD7C'
         }]
       },
 
@@ -208,54 +190,54 @@
 
     const ctx3 = document.getElementById('myChart3');
 
-new Chart(ctx3, {
-  type: 'bar',
+    new Chart(ctx3, {
+      type: 'bar',
 
-  data: {
-    labels: ['Janeiro', 'Fevereiro', 'Março', 'Abril', 'Junho', 'Julho'],
-    datasets: [{
-      label: 'Setor 1 - Temperatura',
-      data: [23, 15, 22, 25, 27, 18],
-      borderWidth: 1,
-      borderColor: '#701214',
-  backgroundColor: '#701214' 
-    },
+      data: {
+        labels: ['Janeiro', 'Fevereiro', 'Março', 'Abril', 'Junho', 'Julho'],
+        datasets: [{
+          label: 'Setor 1 - Temperatura',
+          data: [23, 15, 22, 25, 27, 18],
+          borderWidth: 1,
+          borderColor: '#701214',
+          backgroundColor: '#701214'
+        },
 
-    {
-      label: 'Setor 1 - Umidadade',
-      data: [80, 76, 80, 76, 80, 78],
-      borderWidth: 1,
-      borderColor: '#D61C21',
-  backgroundColor: '#D61C21'
-    },  
-    
-    {
-      label: 'Setor 2 - Temperatura',
-      data: [10, 15, 12, 20, 8, 8],
-      borderWidth: 1,
-      borderColor: '#F2CD7C',
-  backgroundColor: '#F2CD7C'
-    },
+        {
+          label: 'Setor 1 - Umidadade',
+          data: [80, 76, 80, 76, 80, 78],
+          borderWidth: 1,
+          borderColor: '#D61C21',
+          backgroundColor: '#D61C21'
+        },
 
-    {
-      label: 'Setor 2 - Umidade',
-      data: [78, 70, 55, 75, 76, 78],
-      borderWidth: 1,
-      borderColor: '#F4A460',
-  backgroundColor: '#F4A460'
-    }]
-  },
+        {
+          label: 'Setor 2 - Temperatura',
+          data: [10, 15, 12, 20, 8, 8],
+          borderWidth: 1,
+          borderColor: '#F2CD7C',
+          backgroundColor: '#F2CD7C'
+        },
 
-  
+        {
+          label: 'Setor 2 - Umidade',
+          data: [78, 70, 55, 75, 76, 78],
+          borderWidth: 1,
+          borderColor: '#F4A460',
+          backgroundColor: '#F4A460'
+        }]
+      },
 
-  options: {
-    scales: {
-      y: {
-        beginAtZero: true
+
+
+      options: {
+        scales: {
+          y: {
+            beginAtZero: true
+          }
+        }
       }
-    }
-  }
-});
+    });
 
 
 
