Alteração da dashboard

--- a/webdatavizeprojgrupo/web-data-viz/public/dashboard.html
+++ b/webdatavizeprojgrupo/web-data-viz/public/dashboard.html
@@ -32,72 +32,72 @@
           <a href="..\integraArduinoide\index.html">
             <img src="imgs/barril-vermelho.svg" alt="">
           </a>
-          <p>Temperatura Max:13.4</p>
-          <p>Temperatura Min:19.8</p>
+          <p>Temperatura : <div class="temperatura"></div></p>
+          <p>Umidade : <div class="umidade"></div></p>
         </div>
         <div>
           <h3>Barril 2</h3>
           <a href="..\integraArduinoide\index.html">
             <img src="imgs/barril-vermelho.svg" alt="">
           </a>
-          <p>Temperatura Max:13.4</p>
-          <p>Temperatura Min:19.8</p>
+          <p>Temperatura : <div class="temperatura"></div></p>
+          <p>Umidade : <div class="umidade"></div></p>
         </div>
         <div>
           <h3>Barril 3</h3>
           <a href="..\integraArduinoide\index.html">
             <img src="imgs/barril-vermelho.svg" alt="">
           </a>
-          <p>Temperatura Max:13.4</p>
-          <p>Temperatura Min:19.8</p>
+          <p>Temperatura : <div class="temperatura"></div></p>
+          <p>Umidade : <div class="umidade"></div></p>
         </div>
         <div>
           <h3>Barril 4</h3>
           <a href="..\integraArduinoide\index.html">
             <img src="imgs/barril-amarelo.svg" alt="">
           </a>
-          <p>Temperatura Max:13.4</p>
-          <p>Temperatura Min:19.8</p>
+          <p>Temperatura : <div class="temperatura"></div></p>
+          <p>Umidade : <div class="umidade"></div></p>
         </div>
         <div>
           <h3>Barril 5</h3>
           <a href="..\integraArduinoide\index.html">
             <img src="imgs/barril-amarelo.svg" alt="">
           </a>
-          <p>Temperatura Max:13.4</p>
-          <p>Temperatura Min:19.8</p>
+          <p>Temperatura : <div class="temperatura"></div></p>
+          <p>Umidade : <div class="umidade"></div></p>
         </div>
         <div>
           <h3>Barril 6</h3>
           <a href="..\integraArduinoide\index.html">
             <img src="imgs/barril-amarelo.svg" alt="">
           </a>
-          <p>Temperatura Max:13.4</p>
-          <p>Temperatura Min:19.8</p>
+          <p>Temperatura : <div class="temperatura"></div></p>
+          <p>Umidade : <div class="umidade"></div></p>
         </div>
         <div>
           <h3>Barril 7</h3>
           <a href="..\integraArduinoide\index.html">
             <img src="imgs/barril-verde.svg" alt="">
           </a>
-          <p>Temperatura Max:13.4</p>
-          <p>Temperatura Min:19.8</p>
+          <p>Temperatura : <div class="temperatura"></div></p>
+          <p>Umidade : <div class="umidade"></div></p>
         </div>
         <div>
           <h3>Barril 8</h3>
           <a href="..\integraArduinoide\index.html">
             <img src="imgs/barril-verde.svg" alt="">
           </a>
-          <p>Temperatura Max:13.4</p>
-          <p>Temperatura Min:19.8</p>
+          <p>Temperatura : <div class="temperatura"></div></p>
+          <p>Umidade : <div class="umidade"></div></p>
         </div>
         <div>
           <h3>Barril 9</h3>
           <a href="..\integraArduinoide\index.html">
             <img src="imgs/barril-verde.svg" alt="">
           </a>
-          <p>Temperatura Max:13.4</p>
-          <p>Temperatura Min:19.8</p>
+          <p>Temperatura : <div class="temperatura"></div></p>
+          <p>Umidade : <div class="umidade"></div></p>
         </div>
         <div>
           <h3>Barril 10</h3>
@@ -105,8 +105,8 @@
 
             <img src="imgs/barril-verde.svg" alt="">
           </a>
-          <p>Temperatura Max:13.4</p>
-          <p>Temperatura Min:19.8</p>
+          <p>Temperatura : <div class="temperatura"></div></p>
+          <p>Umidade : <div class="umidade"></div></p>
         </div>
       </div>
     </div>
