--- a/webdatavizeprojgrupo/web-data-viz/public/loginBobia.html
+++ b/webdatavizeprojgrupo/web-data-viz/public/loginBobia.html
@@ -26,6 +26,17 @@
 
     <div class="pai">
 
+        <div class="voltarr" style=" 
+            position: absolute;
+            top: 0;
+            left: 0;
+            margin: 115px 20px 10px 590px;
+        ">
+    
+            <a href="dashboard.html"><img src="imgs/voltar.png" class="img2"></a>
+    
+        </div>
+
         <h1>Faça o login</h1>
 
         <br><br><br>
