Correção do css da dash

--- a/webdatavizeprojgrupo/web-data-viz/public/dashboard.html
+++ b/webdatavizeprojgrupo/web-data-viz/public/dashboard.html
@@ -15,11 +15,11 @@
 
 <body>
   <div class="header">
-    <a href="/Site_institucional/winetemp.html"><img src="imgs/Logo.png" alt="Logo" class="logoNav"></a>
+    <a href="Login.html"><img src="imgs/Logo.png" alt="Logo" class="logoNav"></a>
     <div class="container1">
       <ul class="navbar">
         <li><a href="loginBobia.html">Suporte</a></li>
-        <li><a href="Login.html">Sair</a></li>
+        <li><a href="Login.html" onclick="limparSessao()">Sair</a></li>
       </ul>
     </div>
   </div>
